--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "localgov",
+  "name": "lofin",
   "version": "0.1.0",
-  "description": "yeou",
-  "homepage": "https://yeou.vercel.app",
+  "description": "lofin",
+  "homepage": "https://lofin.vercel.app",
   "bugs": {
-    "url": "https://github.com/gwak2837/yeou/issues",
+    "url": "https://github.com/gwak2837/lofin/issues",
     "email": "gwak2837@kakao.com"
   },
   "license": "GPL-3.0-only",
   "author": "Taeuk Gwak <gwak2837@kakao.com>",
-  "repository": "https://github.com/gwak2837/yeou.git",
+  "repository": "https://github.com/gwak2837/lofin.git",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
