--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^4.24.4",
     "apexcharts": "^3.36.3",
+    "lru-cache": "^7.14.1",
     "next": "13.1.6",
     "node-fetch": "^3.3.0",
     "react": "18.2.0",
