--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-hot-toast": "^2.4.0",
     "recoil": "^0.7.6",
     "sanitize.css": "^13.0.0",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "tui-date-picker": "^4.3.3"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
