--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-hot-toast": "^2.4.0",
+    "react-select": "^5.7.0",
     "recoil": "^0.7.6",
     "sanitize.css": "^13.0.0",
     "sharp": "^0.31.3",
