--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^4.24.4",
     "apexcharts": "^3.36.3",
+    "d3": "^7.8.2",
     "lru-cache": "^7.14.1",
     "next": "13.1.6",
     "node-fetch": "^3.3.0",
@@ -35,6 +36,7 @@
     "recoil": "^0.7.6",
     "sanitize.css": "^13.0.0",
     "sharp": "^0.31.3",
+    "topojson": "^3.0.2",
     "tui-date-picker": "^4.3.3"
   },
   "devDependencies": {
