--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tui-date-picker": "^4.3.3"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
