--- a/package.json
+++ b/package.json
@@ -20,40 +20,40 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "@amcharts/amcharts5": "^5.3.11",
     "@svgr/webpack": "^6.5.1",
-    "@tanstack/react-query": "^4.24.4",
-    "apexcharts": "^3.36.3",
-    "d3": "^7.8.2",
-    "lru-cache": "^7.14.1",
-    "next": "13.1.6",
-    "node-fetch": "^3.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.0",
+    "@tanstack/react-query": "^4.29.3",
+    "apexcharts": "^3.39.0",
+    "d3": "^7.8.4",
+    "lru-cache": "^7.18.3",
+    "next": "^13.3.0",
+    "node-fetch": "^3.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
-    "react-select": "^5.7.0",
-    "recoil": "^0.7.6",
+    "react-select": "^5.7.2",
+    "recoil": "^0.7.7",
     "sanitize.css": "^13.0.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.0",
     "topojson": "^3.0.2",
     "tui-date-picker": "^4.3.3"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.14",
-    "cssnano-preset-advanced": "^5.3.9",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^5.1.15",
+    "cssnano-preset-advanced": "^5.3.10",
+    "eslint": "8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.22",
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.4"
   },
   "dependenciesMeta": {
