--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@amcharts/amcharts5": "^5.3.11",
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^4.29.5",
+    "@vercel/analytics": "^1.0.0",
     "lru-cache": "^7.18.3",
     "next": "^13.3.1",
     "node-fetch": "^3.3.1",
