--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@amcharts/amcharts5": "^5.3.17",
+    "@amcharts/amcharts5": "^5.4.0",
     "@tanstack/react-query": "^4.29.19",
     "@vercel/analytics": "^1.0.1",
     "lru-cache": "^7.18.3",
-    "next": "^13.4.7",
+    "next": "^13.4.9",
+    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -46,7 +47,7 @@
     "eslint-config-next": "^13.3.1",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
